# ntp

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: request.rs
src/: errors.rs  lib.rs  main.rs  packet.rs  protocol.rs  unix_time.rs
src/formats/: mod.rs  timestamp.rs
tests/: protocol.rs
